Update Address 3rd try

--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@ increase returning customers and boost transactions.</p>
 						<div class="col-md-5 wow animated fadeInRight">
 							<address class="contact-details">
 								<h3>Contact Us</h3>
-								<p><i class="fa fa-pencil"></i>ilster Online Systems<span>KEDOYA ELOK APARTMENT UNIT #S-702</span><span>Jakarta Berat, 12550</span><span>INDONESIA</span></p><br>
+								<p><i class="fa fa-pencil"></i>ilster Online Systems<span>Kedoya elok Apt #S-702</span><span>Jakarta Berat, 12550</span><span>INDONESIA</span></p><br>
 								<p><i class="fa fa-phone"></i>Mobile: +32473990371</p>
 								<p><i class="fa fa-phone"></i>Phone: +6281236664755</p>
 								<p><i class="fa fa-envelope"></i>info@ilster.com</p>
